# amours

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  MIXPLAY_COMMANDS.md  MIX_PLAY_GUIDE.md  QUICKSTART.md  README.md  RECORDING_GUIDE.md  analyze_love.py  compare_vocabularies.py  extract_vocabulary.py  final_mix_play.py  launch.sh  launcher_interactif.py  main_interactive.py  main_with_love_analysis.py  mix_play_interactive.py  pyproject.toml  reconstruct_sentences.py  requirements.txt  run_api.py  setup.sh  transcribe_audio.py  transcribe_with_sentences.py  vocabulary_explorer.py  vocabulary_extracted.txt
.github/: copilot-instructions.md
api/: __init__.py  app.py  config.py  models.py  schemas.py
examples/: basic_usage.py  batch_generator.py  chunk_mix_player.py  diagnose_search.py  interactive_generator.py  mix_play_demo_formats.py  mix_play_example.py  phrase_montage.py  phrase_montage_with_love_types.py  real_sentences.py  smart_mix_test.py  test_advanced_audio.py  test_audio_quality.py  test_corrected_audio.py  test_gpu_transcription.py  test_include_next.py  test_love_analysis.py  test_phrase.py  test_semantic_analysis.py  test_simple.py  test_source_diversity.py  test_speakers_simple.py  test_tempo_fix.py  test_with_speakers.py  vocabulary_explorer.py
src/: __init__.py  audio_processor.py  enriched_export.py  export.py  fast_transcriber.py  live_transcriber.py  love_analyzer.py  main.py  main_with_speakers.py  mix_player.py  sentence_reconstructor.py  simple_transcriber_with_speakers.py  transcriber.py  transcriber_with_speakers.py  (+1 more)
(+51 files in other folders)
